Fix height on smaller screens
Added position relative to body
Added width 100% to body
Achieved better scalability with very small screen devices.

Re-applied overflow auto on the direct child of main-grid.

--- a/style.css
+++ b/style.css
@@ -19,7 +19,12 @@
 
 body,html{
     height: 100%;
+    width: 100%;
     font-family: 'Roboto', sans-serif;
+}
+
+body{
+    position: fixed;
 }
 
 p{
@@ -219,6 +224,10 @@ section.main{
     /* max-height: 575px; */
 }
 
+.main-grid > div{
+    overflow: auto;
+}
+
 .projects{
     padding: 1em;
     padding-top: 5px;
@@ -245,6 +254,7 @@ section.main{
 .box{
     background-color: white;
     border: 1px solid black;
+    height: 100px;
 }
 
 .announcements-container{
